kubernetes-cka/07-security/network-policy/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    role: web
spec:
  containers:
  - name: nginx 
    image: nginx
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  labels:
    role: api
spec:
  containers:
  - name: api-pod
    image: openjdk
    ports:
    - containerPort: 5000
---
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    role: db
spec:
  containers:
  - name: db
    image: mariadb
    ports:
      - containerPort: 3306
